<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="userName">Digite seu nome</string>
    <string name="foneNumber">(99) 99999-9999</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="validation">Validaçao</string>
    <string name="msgValidation">Você recebeu um SMS para validação do seu número, digite o código de validação abaixo:</string>
    <string name="code">Digite o código</string>
    <string name="validate">Validar</string>
    <string name="codCountry">+55</string>
    <string name="sms_message">WhatsAppClone código de confirmação</string>
    <string name="title_alert_dialog_permission">Pernission denied</string>
    <string name="msg_alert_dialog_permission">For use this APP you need grant the permissions</string>
    <string name="btn_confirm_dialog_permission">CONFIRMAR</string>
    <string name="sms_not_sended">SMS não enviado</string>
    <string name="token_valid">Token validado</string>
    <string name="token_not_valid">Token não validado</string>
    <string name="loginText">Login</string>
    <string name="no_account">Não tem conta? Cadastre-se</string>
    <string name="userPassword">Password</string>
    <string name="textRegister">Cadastrar</string>
    <string name="registration_success">Usuário registrado com sucesso</string>
    <string name="loginError">Erro ao logar o Usuario.</string>
    <string name="signOut">Sair</string>
    <string name="action_settings">Configurações</string>
    <string name="add_person">Adicionar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_user">Email do usuário</string>
    <string name="txtRegister">Cadastrar</string>
    <string name="txtCancel">Cancelar</string>
</resources>
