<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/action_sign_out"
        android:title="@string/signOut"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/signOut"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"/>

    <item
        android:id="@+id/action_add"
        android:title="@string/add_person"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_person_add"/>
</menu>
