<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luissilva.whatsappclone.activity.ValidatorActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/ivImgLogo"
        android:layout_width="@dimen/width_logo"
        android:layout_height="@dimen/height_logo"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_top_logo" />

    <TextView
        android:id="@+id/tvValidation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validation"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/title_screem"
        android:layout_below="@id/ivImgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_between_components"/>

    <TextView
        android:id="@+id/txtMsgValidation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgValidation"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        android:layout_below="@id/tvValidation"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/space_between_components"/>

    <EditText
        android:id="@+id/edtCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:hint="@string/code"
        android:textColorHint="@color/textColorPrimary"
        android:textAlignment="center"
        android:textSize="@dimen/code_size"
        android:layout_below="@id/txtMsgValidation"
        android:layout_marginTop="@dimen/space_between_components"
        android:layout_margin="@dimen/space_between_components"
        android:inputType="number"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/validate"
        android:layout_below="@id/edtCode"
        android:textColor="@color/textColorPrimary"
        android:layout_margin="@dimen/space_between_components"/>

</RelativeLayout>
