<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luissilva.whatsappclone.activity.LoginActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/ivLogoApp"
        android:layout_width="@dimen/width_logo"
        android:layout_height="@dimen/height_logo"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_top_logo"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        android:layout_marginTop="@dimen/space_top_logo"
        android:layout_marginBottom="@dimen/space_between_components"
        android:layout_below="@id/ivLogoApp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/space_between_components"
        android:layout_margin="@dimen/space_between_components"
        android:text="luizhrick@gmail.com"/>

    <EditText
        android:id="@+id/edtPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/codCountry"
        android:layout_below="@id/edtEmail"
        android:textColorHint="@android:color/white"
        android:textColor="@color/textColorPrimary"
        android:paddingLeft="@dimen/space_between_components"
        android:layout_margin="@dimen/space_between_components"
        android:text="123456"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:text="@string/loginText"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/space_between_components"
        android:layout_below="@id/edtPassWord"
        android:layout_margin="@dimen/space_between_components"/>

    <TextView
        android:id="@+id/tvNoRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:textColor="@android:color/white"
        android:layout_below="@id/btnLogin"
        android:layout_margin="@dimen/space_between_components"
        android:padding="@dimen/space_between_components"
        android:textAlignment="center"/>


</RelativeLayout>
