<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luissilva.whatsappclone.activity.UserRegisterActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivLogoRegister"
        android:layout_width="@dimen/width_logo"
        android:layout_height="@dimen/height_logo"
        android:layout_marginTop="@dimen/space_top_logo"
        android:src="@drawable/usuario"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        android:layout_marginBottom="@dimen/space_between_components"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/space_between_components"
        android:layout_margin="@dimen/space_between_components"
        android:text="Luis Henrique"/>

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        android:layout_marginBottom="@dimen/space_between_components"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/space_between_components"
        android:layout_margin="@dimen/space_between_components"
        android:text="luizhrick@gmail.com"/>

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userPassword"
        android:layout_marginBottom="@dimen/space_between_components"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/space_between_components"
        android:layout_margin="@dimen/space_between_components"
        android:text="123456"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:text="@string/textRegister"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/space_between_components"
        android:layout_below="@id/edtPassWord"
        android:layout_margin="@dimen/space_between_components"/>

</LinearLayout>
